@@ -18,6 +18,8 @@ Keep absence's other reason when there is recurrence
 Fix display of agents on vacation on the week schedules
 Prevent warnings in script tools/remove_html_entities_from_absences_reasons.php
 Prevent the redirection to the 'access denied' page on cli and symfony mode
+Replace heredoc string by double quotes string at end of weekly
+planning
 
 *** Version 20.10.00       (2020-10-09)   ***
 - Enhancements
